# BloomFilter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  requierments.txt  run.bat
.github/workflows/: c-cpp.yml  push-to-hub.yml
src/: BitsArray.cpp  BitsArray.h  HashFunctions.cpp  HashFunctions.h  InputOutput.cpp  InputOutput.h  Main.cpp  calc.cpp
src/include/: BitsArray.h
tests/: BitsArray_test.cpp  bloomFilter_test.cpp  calc_test.cpp
